--- a/backend/springbootMS/products/src/main/resources/application.properties
+++ b/backend/springbootMS/products/src/main/resources/application.properties
@@ -1,9 +1,12 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/microserv
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
 server.port=8181
 
