--- a/backend/springbootMS/products/src/main/resources/application.properties
+++ b/backend/springbootMS/products/src/main/resources/application.properties
@@ -17,7 +17,9 @@ spring.main.allow-bean-definition-overriding=true
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-skorb.rabbitmq.queue=message-queue
-skorb.rabbitmq.exchange=some.exchange
-skorb.rabbitmq.routingkey=some.routingkey
+skorb.rabbitmq.exchange=some-exchange
+skorb.rabbitmq.queue.cart=cart-to-prod
+skorb.rabbitmq.queue.prod=prod-to-cart
+skorb.rabbitmq.routingkey.cart=cart-routingkey
+skorb.rabbitmq.routingkey.prod=prod-routingkey
 
