added config and properties for 3rd queue

--- a/backend/springbootMS/products/src/main/resources/application.properties
+++ b/backend/springbootMS/products/src/main/resources/application.properties
@@ -20,6 +20,12 @@ spring.rabbitmq.password=guest
 skorb.rabbitmq.exchange=some-exchange
 skorb.rabbitmq.queue.cart=cart-to-prod
 skorb.rabbitmq.queue.prod=prod-to-cart
+skorb.rabbitmq.queue.order=order-to-prod
 skorb.rabbitmq.routingkey.cart=cart-routingkey
 skorb.rabbitmq.routingkey.prod=prod-routingkey
+skorb.rabbitmq.routingkey.order=order-routingkey
+
+
+
+
 
