--- a/frontend/mfeContainer/cart/angular.json
+++ b/frontend/mfeContainer/cart/angular.json
@@ -77,6 +77,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "Cart:build",
+            "proxyConfig": "src/proxy.conf.json"
+          },
           "configurations": {
             "production": {
               "browserTarget": "Cart:build:production"
@@ -94,6 +98,7 @@
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
             "browserTarget": "Cart:build"
+            
           }
         },
         "test": {
