--- a/frontend/mfeContainer/cart/package.json
+++ b/frontend/mfeContainer/cart/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "bootstrap": "^5.3.1",
+    "ngx-bootstrap": "^11.0.2",
     "rxjs": "~7.8.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^8.1.0",
