--- a/frontend/mfeContainer/product/package.json
+++ b/frontend/mfeContainer/product/package.json
@@ -2,6 +2,7 @@
   "name": "@spa-product/product",
   "scripts": {
     "start": "webpack serve",
+    "server": "json-server -p 3005 --watch db.json --host 127.0.0.1",
     "start:standalone": "webpack serve --env standalone",
     "build": "concurrently npm:build:*",
     "build:webpack": "webpack --mode=production",
@@ -26,6 +27,7 @@
     "babel-jest": "^27.0.6",
     "concurrently": "^6.2.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-react-important-stuff": "^3.0.0",
@@ -36,27 +38,35 @@
     "jest-cli": "^27.0.6",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-config-single-spa-react": "^4.0.0",
     "webpack-dev-server": "^4.0.0",
-    "webpack-merge": "^5.8.0",
-    "tailwindcss": "^3.3.2"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "single-spa-react": "^4.3.1",
-    "axios": "^1.4.0",
-    "bulma": "^0.9.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.3",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^3.4.1",
+    "bulma": "^0.9.4",
     "classnames": "^2.3.2",
     "json-server": "^0.17.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "single-spa-react": "^4.3.1",
+    "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   }
 }
