--- a/backend/springbootMS/products/src/main/resources/application.properties
+++ b/backend/springbootMS/products/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto= create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/microserv
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.profiles.active=development
 spring.jpa.show-sql=true
